--- a/src/main/resources/assets/dtaether/lang/en_us.json
+++ b/src/main/resources/assets/dtaether/lang/en_us.json
@@ -1,8 +1,6 @@
 {
   "block.dtaether.skyroot_branch":"Skyroot Tree",
-  "block.dtaether.golden_oak_branch":"Golden Oak Tree",
-  "block.dtaether.crystal_branch":"Crystal Tree",
-  "block.dtaether.holiday_branch":"Holiday Tree",
+  "block.dtaether.imbued_skyroot_branch":"Skyroot Tree",
 
   "species.dtaether.skyroot":"Skyroot",
   "species.dtaether.golden_oak":"Golden Oak",
